storage/innobase/handler/ha_innodb.cc
@@ -4,7 +4,7 @@ Copyright (c) 2000, 2019, Oracle and/or its affiliates. All Rights Reserved.
 Copyright (c) 2008, 2009 Google Inc.
 Copyright (c) 2009, Percona Inc.
 Copyright (c) 2012, Facebook Inc.
-Copyright (c) 2013, 2019, MariaDB Corporation.
+Copyright (c) 2013, 2020, MariaDB Corporation.
 
 Portions of this file contain modifications contributed and copyrighted by
 Google, Inc. Those modifications are gratefully acknowledged and are described
@@ -3502,17 +3502,6 @@ trx_is_interrupted(
 	const trx_t*	trx)	/*!< in: transaction */
 {
 	return(trx && trx->mysql_thd && thd_kill_level(trx->mysql_thd));
-}
-
-/**********************************************************************//**
-Determines if the currently running transaction is in strict mode.
-@return TRUE if strict */
-ibool
-trx_is_strict(
-/*==========*/
-	trx_t*	trx)	/*!< in: transaction */
-{
-	return(trx && trx->mysql_thd && THDVAR(trx->mysql_thd, strict_mode));
 }
 
 /**************************************************************//**
@@ -12742,7 +12731,10 @@ int create_table_info_t::create_table(bool create_fk)
 						 DICT_ERR_IGNORE_NONE);
 	ut_ad(innobase_table);
 
-	const bool is_acceptable = row_size_is_acceptable(*innobase_table);
+	/* In TRUNCATE TABLE, we will merely warn about the maximum
+	row size being too large. */
+	const bool is_acceptable = row_size_is_acceptable(*innobase_table,
+							  create_fk);
 
 	dict_table_close(innobase_table, true, false);
 
@@ -12755,18 +12747,12 @@ int create_table_info_t::create_table(bool create_fk)
 }
 
 bool create_table_info_t::row_size_is_acceptable(
-    const dict_table_t &table) const
+  const dict_table_t &table, bool strict) const
 {
   for (dict_index_t *index= dict_table_get_first_index(&table); index;
        index= dict_table_get_next_index(index))
-  {
-
-    if (!row_size_is_acceptable(*index))
-    {
+    if (!row_size_is_acceptable(*index, strict))
       return false;
-    }
-  }
-
   return true;
 }
 
@@ -12944,7 +12930,7 @@ static void ib_warn_row_too_big(THD *thd, const dict_table_t *table)
 }
 
 bool create_table_info_t::row_size_is_acceptable(
-    const dict_index_t &index) const
+    const dict_index_t &index, bool strict) const
 {
   if ((index.type & DICT_FTS) || index.table->is_system_db)
   {
@@ -12953,7 +12939,7 @@ bool create_table_info_t::row_size_is_acceptable(
     return true;
   }
 
-  const bool strict= THDVAR(m_thd, strict_mode);
+  const bool innodb_strict_mode= THDVAR(m_thd, strict_mode);
   dict_index_t::record_size_info_t info= index.record_size_info();
 
   if (info.row_is_too_big())
@@ -12964,9 +12950,9 @@ bool create_table_info_t::row_size_is_acceptable(
     const size_t idx= info.get_first_overrun_field_index();
     const dict_field_t *field= dict_index_get_nth_field(&index, idx);
 
-    if (strict || global_system_variables.log_warnings > 2)
+    if (innodb_strict_mode || global_system_variables.log_warnings > 2)
     {
-      ib::error_or_warn(strict)
+      ib::error_or_warn(strict && innodb_strict_mode)
           << "Cannot add field " << field->name << " in table "
           << index.table->name << " because after adding it, the row size is "
           << info.get_overrun_size()
@@ -12974,10 +12960,8 @@ bool create_table_info_t::row_size_is_acceptable(
           << info.max_leaf_size << " bytes) for a record on index leaf page.";
     }
 
-    if (strict)
-    {
+    if (strict && innodb_strict_mode)
       return false;
-    }
 
     ib_warn_row_too_big(m_thd, index.table);
   }
